     (contributed by Alex Jarosch, completed by Stefan Saring)
 - support for sport type specific speed modes (Issue #197):
   - the user can define for each sport type whether speed has to be handled as
     speed (e.g. km/h for cycling) or pace (e.g. min/km for running)
   - the user can define a preferred speed mode in the Preferences Dialog, this
     is being used for new sport types or when multiple sport types are shown
   - the speed mode of a sport type is used for entering and displaying exercise
     speed data and in the Exercise Viewer when showing HRM files
   - when speed mode has not been set for a sport type yet, then the preferred
     speed mode will be used
 ExerciseViewer changes:
 - GarminFitParser: ported to Kotlin (incl. tests)
 - TopoGrafixGpxParser: added support for parsing GPX files with partial
   altitude data (GitHub issue #191)
 - updated Garmin FIT SDK library to version 20.80.00

v7.5.0:
 SportsTracker changes:
 - Java 9 / 10 update
   - updated Maven plugins
   - updated all dependencies / libraries to current versions
   - updated ControlsFX to version 9.0.0
 - JEP 226 usage: converted all translation files of the resource bundles to
   UTF-8 encoding and removed all Unicode escape sequences (e.g. \u00c4)
   - creation or update of translation files is much easier now (see I18N.txt)
 - fixed encoding problems in dutch translation
 - update to JFreeChart 1.5.0, does not need the JCommon library anymore
 - added official JFreeChart-FX 1.0.0 library, custom patch not needed anymore
 - updated Kotlin to version 1.2.31
 - updated documentation for project import and IDE setup in IDEA and Eclipse
 - migrated all unit tests to JUnit 5 (version 5.1.0)
   - provides better testing of expected exception calls and handling
 ExerciseViewer changes:
 - GarminFitParser: bugfix for handling of missing sample data,
   e.g. temperature, heartrate, speed
   (GitHub issue #168, occurred with Edge 800 files)
 - Diagram Panel improvements: