@@ -24,7 +24,8 @@ v7.5.1:
    - the user can define for each sport type whether speed has to be handled as
      speed (e.g. km/h for cycling) or pace (e.g. min/km for running)
    - the user can define a preferred speed mode in the Preferences Dialog, this
-     is being used for new sport types or when multiple sport types are shown
+     is being used for new sport types, when multiple sport types are shown and
+     in the Overview Dialog
    - the speed mode of a sport type is used for entering and displaying exercise
      speed data and in the Exercise Viewer when showing HRM files
    - when speed mode has not been set for a sport type yet, then the preferred
